# hello-agno

./: .gitignore  README.md  level_1_agent.py  level_2_agent.py  level_3_agent.py  main.py  pyproject.toml
agents/: research_agent.py
tmp/: level_2_agent.db
tmp/lancedb/agno_docs.lance/_transactions/: 0-90637aa5-cc1f-4de2-a211-0073224e77c7.txn  1-de22f476-6909-4167-8bb0-62b65cc15246.txn  10-35d40ec9-2800-450f-a9fe-e499d9496ac6.txn  11-fae4d7ef-9960-4491-b75c-9e486523e399.txn  12-6c049ee6-80ec-405f-903f-18ae3e0795f5.txn  13-c765f224-de44-4ef0-a4a1-a10eb9106eca.txn  14-29ecc8ea-9b4d-4cfb-bbf9-ac0d8f055baf.txn  15-1ad9d911-5016-4567-b61e-c107d88ae2eb.txn  16-434a228e-63a5-4c32-9be7-737e173ef705.txn  17-d1480a4e-22dc-4222-8518-751dd25dcdae.txn  18-c2f86c87-8878-4c58-8b25-fb14452b8610.txn  19-b3a1a5e9-49c4-48a6-a058-691c209e4b84.txn  2-751e967c-2524-4a11-8b56-8fc0cffb2999.txn  20-bd0b8635-1a41-4fe9-9ac5-b4160e8a7d1a.txn  21-bff03ef7-b244-43ce-ab48-25258984eb99.txn  22-a83b1ee8-0bd7-46b5-a165-cbf44c71c075.txn  3-338e5a09-09b8-4ad9-82ab-fcf46f11311c.txn  4-c6d123b2-ccc2-497d-9875-ab6c50007fdb.txn  5-e6319705-d4ae-4fb1-bc82-c4473a71c30f.txn  6-f241fbdc-26b3-4f81-af0d-35f12bf6efd9.txn  7-eb02f43c-c09e-48f0-a0d6-ac0ec43687d7.txn  8-4ad80960-8ba0-4cb0-8a0a-2af49c388d1d.txn  9-b794bef2-b44a-4398-8ebd-35fbb07db3af.txn
tmp/lancedb/agno_docs.lance/_versions/: 1.manifest  10.manifest  11.manifest  12.manifest  13.manifest  14.manifest  15.manifest  16.manifest  17.manifest  18.manifest  19.manifest  2.manifest  20.manifest  21.manifest  22.manifest  23.manifest  3.manifest  (+6 more)
(+22 files in other folders)
